fixed checkout alignment

--- a/src/UI/CartPage/CartCheckout/CartCheckout.module.css
+++ b/src/UI/CartPage/CartCheckout/CartCheckout.module.css
@@ -3,7 +3,7 @@
     position: sticky;
     left: 1rem;
     top: 10rem;
-    margin-top: 7rem;
+    margin-top: 6.5rem;
     padding: 1rem;
     height: max-content;
     width: 100%;
